scenarios/roles/build-a-backdoor/files/manifests/06-scenario-resources.yaml
## Attach Container
apiVersion: v1
kind: Namespace
metadata:
  name: ii-prod
---
apiVersion: v1
kind: Pod
metadata:
  name: ii-management-services
  namespace: ii-prod
  labels:
    app: ii
spec:
  containers:
  - name: ii-website
    image: controlplaneoffsec/build-a-backdoor:ii-app
    ports:
    - containerPort: 8080
      name: web
    - containerPort: 5724
      name: ops-mgmt
    securityContext:
      allowPrivilegeEscalation: false
  restartPolicy: Always
---
apiVersion: v1
kind: Service
metadata:
  name: ii-prod-mgmt-service
  namespace: ii-prod
spec:
  selector:
    app: ii
  ports:
  - name: web
    port: 80
    targetPort: 8080
    protocol: TCP
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: ii-prod-mgmt-np
  namespace: ii-prod
spec:
  podSelector:
    matchLabels:
      app: ii
  policyTypes:
  - Ingress
  ingress:
  - ports:
    - port: 8080
---
## JumpBox Resources
apiVersion: v1
kind: Namespace
metadata:
  name: dmz
---
apiVersion: v1
kind: Pod
metadata:
  name: jumpbox-terminal
  namespace: dmz
spec:
  serviceAccountName: sre
  containers:
  # basic container image
  - image: controlplaneoffsec/build-a-backdoor:ii-jumpbox
    command: ["sleep", "2d"]
    name: jumpbox-terminal
    securityContext:
      allowPrivilegeEscalation: false
  restartPolicy: Always
---
## Misconfigured helm chart causes incorrect ns deployment
apiVersion: v1
kind: Namespace
metadata:
  name: ii-pord
---
apiVersion: v1
kind: Service
metadata:
  name: ii-pord-mgmt-service
  namespace: ii-pord
spec:
  type: NodePort
  selector:
    app: ii
  ports:
  - protocol: TCP
    port: 80
    targetPort: 8080
    nodePort: 30080
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: ii-pord-mgmt-np
  namespace: ii-pord
spec:
  podSelector:
    matchLabels:
      app: ii
  policyTypes:
  - Ingress
  ingress:
  - ports:
    - port: 8080
